--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+#
+.DS_Store
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -94,3 +97,4 @@ java/target/
 # Intelij Idea
 java/.idea/
 java/*.iml
+java/.DS_Store
